<resources>
    <string name="app_name">StrahPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_osago">ОСАГО</string>
    <string name="menu_kasko">КАСКО</string>
    <string name="menu_manager">Менеджер</string>
    <string name="menu_result">Итог</string>
    <string name="menu_start">Главный экран</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>