<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_osago"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_osago" />
        <item
            android:id="@+id/nav_kasko"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_kasko" />
        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/menu_manager" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_result" />
    </group>
</menu>